# etherpush

./: .gitignore  Makefile.am  PROTOCOL  README.md  TODO  autogen.sh  configure.ac
po/: POTFILES.in  POTFILES.skip  de.po
src/: Makefile.am  client.c  client.h  client.vala  error-dialog.c  error-dialog.h  error-dialog.vala  etherpush.c  etherpush.vala  incoming-dialog.c  incoming-dialog.h  incoming-dialog.vala  progress-window.vala  send-dialog.c  send-dialog.h  send-dialog.vala  server.c  server.h  server.vala  status-icon.c  status-icon.h  status-icon.vala
vapi/: config.vapi
